SERVER-4171 check in wbl for newly sharded state, reload